# voice-type

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt
scripts/: install.sh
voice_type/: __init__.py  __main__.py  app.py  config.py  cuda_libs.py  icons.py  notify.py  recorder.py  transcriber.py  typer.py
